# learning-opengl

./: .gitignore  CMakeLists.txt  CMakePresets.json  run.sh
glad/include/glad/: glad.h
glad/src/: glad.c
include/: Timer.h  errorReporting-2.h  shader-2.h
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp  shader.cpp
